Fixed collapse

--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,21 @@
   text-align: center;
 }
 
+p {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
 .navbar-main {
   display: flex;
   justify-content: space-between;
-  background-color: lightcoral;
+  background-color: lightgray;
   padding-left: 1rem;
   padding-right: 1rem;
   align-items: center;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  /* border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px; */
+  border-radius: 10px;
 }
 
 .navbar-main > p {
@@ -26,8 +32,8 @@ a:link {
 }
 
 .navbar-main > button {
-  background-color: lightblue;
-  border-radius: 10px;
+  background-color: rgb(46, 51, 57);
+  border-radius: 3px;
   border: none;
   padding-left: 20px;
   padding-right: 20px;
@@ -40,11 +46,15 @@ a:visited {
   text-decoration: none;
 }
 
+a:active {
+  color: #ff1616;
+}
+
 .main-logo {
   max-width: 100px;
 }
 
-.collapse {
+/* .collapse {
   font-size: 20px;
   background-color: black;
   margin: 25px 90px 25px 90px;
@@ -52,4 +62,39 @@ a:visited {
   border-radius: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
+} */
+
+.kids-logo {
+  max-width: 300px;
+}
+
+.group-photo {
+  max-width: 400px;
+  border-radius: 10px;
+  margin-top: 30px;
+}
+
+.home > small {
+  width: 400px;
+  text-align: center;
+}
+
+.scoring-img {
+  max-width: 400px;
+  border-radius: 10px;
+  margin-top: 30px;
+}
+
+.Collapsible {
+  font-size: 20px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+}
+
+.Collapsible > p {
+  color: red;
 }
